Corrected names and types of constants. Expanded the interface. I deleted the empty styles file, connected the SVG ICON to the Stars.tsx component, and added the LENGTH_CHARS_14 constant. Wrapped ICON("left-array & right-array") in <button>ICON</button> of the "TeamSlider.tsx" component. Removed the last element from the TITLE_BREADCRUMBS constant and inserted it using the spread operator directly into the "breadcrumbs.tsx" component

--- a/src/scss/screens/title/components/_nextSeasons.scss
+++ b/src/scss/screens/title/components/_nextSeasons.scss
@@ -51,7 +51,7 @@
     }
 
     .next-seasons__description {
-      width: 260px;
+      width: 270px;
 
       &-stars {
         display: flex;
